@@ -11,6 +11,9 @@ Development version
   This is used when raising MethodNotAllowed, which now correctly lists the
   allowed methods as required by HTTP 1.1 spec.
 
+- RequestHandler instances are now callable. __call__() replaces dispatch(),
+  which is now deprecated and just calls the instance.
+
 - Added Tipfy.get_url_adapter(), that returns a bound URL map, to make it
   easier to override the bound server_name or subdomain.
 
